--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
 .card {
   border: 2px solid #444;
   position: absolute;
-  top: 5px;
-  left: 5px;
+  margin-top: 5px;
+  margin-left: 5px;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
