--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,4 @@
-html, body, div, p, ul, li, a, h1, h2, h3, table, form, input {
+html, body, div, p, ul, li, a, h1, h2, h3, table, form, input, pre {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -9,6 +9,15 @@ body {
   color: #333;
   background: #E6E6E6 url('/radialgradient.png');
   background-attachment: fixed;
+}
+a, a:visited, a:link, a:hover {
+  color: #333;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  font-weight: bold;
+}
+a:hover {
+  border-bottom: 1px dotted #333;
 }
 textarea {
   font: 1em Tahoma, Geneva, sans-serif;
@@ -85,34 +94,32 @@ h1 {
   margin-right: 25px;
   margin-bottom: 110px;
 }
-  #chat li {
-    
-  }
-    #chat li .name {
-      padding-top: 6px;
-      float: left;
-      font-weight: bold;
-      font-size: 0.8em;
-    }
-    #chat li .message {
-      margin-left: 65px;
-      padding: 5px 10px;
-      background: #fff;
-      margin-bottom: 5px;
-      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-      -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-    }
-    #chat li .cornered {
-      -moz-border-radius: 0 0 10px 0;
-      -webkit-border-radius: 0 0 10px 0;
-      border-radius: 0 0 10px 0;
-    }
-    #chat li .event {
-      margin-left: 0px;
-      text-align: right;
-      font-style: italic;
-    }
+.name {
+  padding-top: 6px;
+  float: left;
+  font-weight: bold;
+  font-size: 0.8em;
+}
+.player-message {
+  margin-left: 65px;
+}
+.message {
+  padding: 5px 10px;
+  background: #fff;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+}
+.cornered {
+  margin-bottom: 5px;
+  -moz-border-radius: 0 0 10px 0;
+  -webkit-border-radius: 0 0 10px 0;
+  border-radius: 0 0 10px 0;
+}
+.event {
+  text-align: right;
+  font-style: italic;
+}
 #footer {
   position: fixed;
   width: 100%;
@@ -204,31 +211,8 @@ h1 {
 }
 #hint {
   display: none;
-  float: right;
+  cursor: pointer;
 }
-.button {
-  width: 110px;
-  display: block;
-  margin-right: 5px;
-  color: #EEE;
-  background: #152525;
-  font-size: 0.8em;
-  line-height: 1.2em;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  text-decoration: none;
-  border: 2px solid #152525;
-  opacity: 0.7;
-  filter: alpha(opacity=70);
-}
-.button:hover {
-  border-color: #220500;
-  background: #150400;
-}
-.button span {
-  display: block;
-  padding: 2px 4px 2px 4px;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  border: 1px solid #f6f4f4;
-}
+li a { width: 100%; height: 100%; display:block }
+li a:hover { background: #eee }
+.centered { margin: 0 auto; }
