--- a/client/style.css
+++ b/client/style.css
@@ -211,6 +211,13 @@ h1 {
   text-align: center;
   top: 2px;
   left: 2px;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 2px 2px 3x rgba(0, 0, 0, 0.15);
+  
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
