--- a/client/style.css
+++ b/client/style.css
@@ -169,8 +169,8 @@ h1 {
       vertical-align: baseline;
       outline: 0;
       padding: 10px;
-      -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-      -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
       box-sizing: border-box;
     }
     #footer form label {
@@ -228,8 +228,8 @@ h1 {
   margin: 10px auto 0 auto;
 }
 .shape {
-  width: 32px;
-  height: 52px;
+  width: 33px;
+  height: 55px;
   margin-right: 5px;
   display: inline-block;
   background: url('/cards.png') no-repeat;
