--- a/client/style.css
+++ b/client/style.css
@@ -14,6 +14,7 @@ body {
 p {
   padding: 5px;
 }
+h2 { margin: 5px 0; }
 a, a:visited, a:link, a:hover {
   color: #333;
   text-decoration: none;
@@ -191,16 +192,18 @@ h1 {
   margin-bottom: 10px;
   min-width: 300px;
 }
-  #board td {
-    width: 130px;
-    height: 78px;
-    position: relative;
-    top: 0;
-  }
 .cardwrap {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 130px;
+  height: 78px;
+}
+.set {
+  margin: 10px auto;
+  width: 400px;
+  height: 80px;
+}
+.set .cardwrap {
+  float: left;
 }
 .card {
   border: 2px solid #333;
@@ -208,9 +211,9 @@ h1 {
   width: 120px;
   height: 70px;
   position: absolute;
-  text-align: center;
   top: 2px;
   left: 2px;
+  text-align: center;
   border-radius: 10px;
   -moz-border-radius: 10px;
   
