--- a/client/style.css
+++ b/client/style.css
@@ -182,7 +182,7 @@ textarea {
   width: 100%;
   left: 0;
   bottom: 0;
-  height: 60px;
+  height: 40px;
   box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 -4px 0 0 rgba(0, 0, 0, 0.1);
@@ -194,7 +194,7 @@ textarea {
     margin-right: 25px;
   }
     #footer form #input {
-      height: 55px;
+      height: 35px;
       width: 100%;
       border: 0;
       overflow: auto;
@@ -210,6 +210,7 @@ textarea {
       float: left;
       width: 150px;
       margin-left: -170px;
+      margin-top: 10px;
       text-align: right;
     }
 #boardwrap {
