--- a/client/style.css
+++ b/client/style.css
@@ -172,12 +172,7 @@ textarea {
   display:none;
   float: left;
   width: 50%;
-  position: absolute;
-  bottom: 0px;
-}
-#hint .button {
-  margin-left: 75%;
-  width: 25%;
+  margin-top: 5px;
 }
 #footer {
   position: fixed;
@@ -278,9 +273,10 @@ textarea {
   text-shadow: 0px 2px 3px #555;
 }
 #hint {
-  display: none;
   cursor: pointer;
   position: relative;
+  margin-left: 75%;
+  width: 25%;
 }
 #share {
   display: none;
