--- a/client/style.css
+++ b/client/style.css
@@ -39,8 +39,7 @@ h1, h2, h3 {
   line-height: 0.7em;
 }
 h1 {
-  /* font: bold 2.3em/1.2em "Arial Black", sans-serif; */
-  text-shadow: 0px 2px 3px #555;
+  font-size: 40px;
 }
 h2 {
   font-size: 30px;
@@ -125,17 +124,15 @@ textarea {
 }
 .offline {
   display: none;
-  font-size: 2em;
-  font-weight: bold;
-  color: #FFF;
+  color: white;
   background: #333;
   position: absolute;
-  text-align: left;
-  padding: 15px 0px 0px 20px;
-  top: 0px;
-  left: 0px;
-  width: 170px;
-  height: 40px;;
+  text-align: center;
+  padding-top: 18px;
+  top: -5px;
+  left: 0;
+  width: 200px;
+  height: 40px;
   -moz-opacity: .70;
   filter:alpha(opacity=70);
   opacity: .70;
@@ -273,6 +270,7 @@ textarea {
   text-shadow: 0px 2px 3px #555;
 }
 #hint {
+  display: none;
   cursor: pointer;
   position: relative;
   margin-left: 75%;
@@ -283,6 +281,7 @@ textarea {
 }
 #share input {
   width: 80%;
+  margin: 5px 0;
 }
 li a { width: 100%; height: 100%; display:block }
 li a:hover { background: #eee; }
