--- a/client/style.css
+++ b/client/style.css
@@ -80,6 +80,11 @@ textarea {
   position: relative;
   width: 990px;
 }
+  #wrap ul {
+    width: 350px;
+    float: right;
+    z-index: 1;
+  }
 #scoreboard {
   width: 190px;
   margin-top: 10px;
@@ -147,11 +152,6 @@ textarea {
   filter:alpha(opacity=70);
   opacity: .70;
   z-index: 20;
-}
-#chat {
-  width: 350px;
-  float: right;
-  z-index: 1;
 }
 #chat li {
   position: relative;
@@ -299,9 +299,12 @@ textarea {
 li a { width: 100%; height: 100%; display:block }
 li a:hover { background: #eee; }
 .centered { margin: 0 auto; }
-
-#explanation { margin:0 200px 0 310px; }
-#menu { width: 260px; float: left; position: fixed; margin-left: 25px; }
+#menu { width: 260px; margin-left: 25px; }
+#wrap #explanation {
+  margin-left: 300px;
+  width: 690px;
+  float: left;
+}
 .button {
   background: #fff;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
@@ -314,7 +317,7 @@ li a:hover { background: #eee; }
   -moz-border-radius: 10px;
 }
 .set {
-  margin: 10px 0 10px 25px;
+  margin: 7px 0 10px 25px;
   width: 400px;
   height: 80px;
   float: right;
