remove deprecated deps

--- a/client/style.css
+++ b/client/style.css
@@ -333,7 +333,7 @@ li a:hover { background: #eee; }
   width: 390px;
   height: 80px;
   float: right;
-  background: #fff;
+  background: #eee;
   padding: 10px 10px 10px 25px;
   border-radius: 10px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
