more complete lazy adsense

--- a/client/style.css
+++ b/client/style.css
@@ -236,7 +236,7 @@ textarea {
       top: 12px;
       text-align: right;
     }
-    #footer form #footer_center {
+    #footer form #display_ad {
       width: 468px;
       height: 60px;
       position: absolute;
