--- a/client/style.css
+++ b/client/style.css
@@ -69,16 +69,21 @@ textarea {
 #header {
   position: absolute;
   width: 100%;
-  top: 10px;
+  top: 20px;
   height: 40px;
 }
   #header h1 {
-    text-align: center;
+    width: 990px;
+    margin: 0 auto;
   }
+    #header h1 a {
+     margin-left: 275px;
+    }
 #fixwrap {
   position: fixed;
   width: 100%;
-  top: 50px;
+  top: 60px;
+  z-index: -10;
 }
 #fixinner {
   margin: 0 auto;
@@ -86,14 +91,13 @@ textarea {
   width: 990px;
 }
 #wrap {
-  margin: 10px auto 50px auto;
+  margin: 20px auto 50px auto;
   position: relative;
   width: 990px;
 }
   #wrap ul {
     width: 350px;
     float: right;
-    z-index: 1;
   }
 #scoreboard {
   width: 190px;
@@ -204,7 +208,6 @@ textarea {
   height: 60px;
   border-top: 4px solid #aaa;
   background: #cecece;
-  z-index: 20;
 }
   #footer form {
     width: 265px;
@@ -246,7 +249,6 @@ textarea {
   width: 390px;
   margin-left: 215px;
   position: relative;
-  z-index: 10;
 }
 #board {
   margin-bottom: 10px;
@@ -324,7 +326,6 @@ li a:hover { background: #eee; }
   padding-bottom: 25px;
   width: 310px;
   float: left;
-  z-index: 30;
 }
 #wrap #explanation .full {
   width: 700px;
@@ -342,7 +343,6 @@ li a:hover { background: #eee; }
 }
 .set {
   position:relative;
-  z-index:-10;
   margin: 0px -415px 10px 0;
   width: 390px;
   height: 80px;
@@ -353,6 +353,7 @@ li a:hover { background: #eee; }
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  z-index: -10;
 }
 .set .cardwrap {
   float: left;
